--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
     </head>
     <body">
-      <a href="verzik_trainer/index.html">Verzik Trainer</a>
+        <h3><a href="verzik_trainer/index.html">Verzik Trainer</a></h3>
     </body>
 </html>
