--- a/verzik_trainer/index.html
+++ b/verzik_trainer/index.html
@@ -22,10 +22,10 @@
                         <input type="hidden" id="refreshed" value="0">
                         <div class="form-line">
                             <span><label for="weapon-select">Select weapon</label>
-                            <select id="weapon-select" onchange="updateWeaponSelect(this.id)">
-                                <option value="SCYTHE">scythe</option>
-                                <option value="WHIP">whip</option>
-                            </select></span></div>
+                                <select id="weapon-select" onchange="updateWeaponSelect(this.id)">
+                                    <option value="SCYTHE">scythe</option>
+                                    <option value="WHIP">whip</option>
+                                </select></span></div>
                         <br>
                         <div class="form-line">
                             <span><label for="tile-marker-type">Tile marker style</label>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <p align="center">
-                <button id="pause_btn" onclick="pause_play()">Play</button>
+                <button id="pause_btn" onclick="pause_play()">Pause</button>
                 <button id="reset_btn" onclick="reset_verzik()">Reset Verzik</button>
             </p>
         </div>
