--- a/verzik_trainer/index.html
+++ b/verzik_trainer/index.html
@@ -62,7 +62,7 @@
             </div>
             <p align="center">
                 <button id="pause_btn" onclick="pause_play()">Pause</button>
-                <button id="reset_btn" onclick="reset_verzik()">Reset Verzik</button>
+                <button id="reset_btn" onclick="reset()">Reset Verzik</button>
             </p>
         </div>
         <script type="text/javascript" src="js/trainer.js"></script>
